fixed table scroll overflow

--- a/app/css/org.css
+++ b/app/css/org.css
@@ -1,5 +1,5 @@
-/* /////////////////////////////////////////////////////////////////////////////////// */
-/* // graph styles */
+/************************************************************************************* */
+/* svg styles */
 .item {
     fill: "#00ff00";
 }
@@ -37,8 +37,16 @@ path {
 path:hover {
   stroke: #999;
   stroke-width: 4.5;
-/*   cursor: pointer; */
+  cursor: pointer;
 }
+
+/* #path-0 { */
+/*     fill: #000; */
+/*     opacity: 0; */
+/* } */
+
+
+
 
 text {
   font: 10px sans-serif;
@@ -89,8 +97,12 @@ text {
 .dropdown-menu {}
 
 .dropdown-menu {
+/*     color: #fff; */
+/*     background-color: #111 !important; */
+
     color: #fff;
-    background-color: #111 !important;
+    background-color: #286090;
+    border-color: #204d74;
 }
 
 .dropdown-menu>li>a {
@@ -109,7 +121,7 @@ text {
 
 a.activeItem {
     font-weight: 600;
-    background-color: #286090;
+    background-color: #204d74;
 }
 
 .breadcrumb {
@@ -181,125 +193,38 @@ input[readonly].form-control {
 /*     padding-left: 15px; */
 /* } */
 
-/* /////////////////////////////////////////////////////////////////////////////////// */
-/* //  */
+.btn-default:hover, .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active, .open>.dropdown-toggle.btn-default {
+    color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
+}
 
-.leader {
-    color: #31708f;
-}
-.list-group-item-less {
-/*     background-color: #2C3539; */
-    border: 0px solid #000 !important;
-}
 
 
 /************************************************************************************* */
 /* layout */
 
 .infoPanel {
-    width: 250px;
+    width: 400px;
     height: 670px;
     margin-bottom: 0px;
 /*     float: left; */
 }
-
-/* .drop-panel { */
-/*     height: 200px; */
-/* } */
-
-.droppilot {
-    overflow: auto;
-/*     display: inline-block; */
-    width: 100%;
-    height: 175px;
-/*     height: 150px; */
-/*     border: 1px #7f7f7f solid; */
-/*     float: left; */
-}
-
-/* .member-panel { */
-/*     width: 250px; */
-/*     height: 200px; */
-/*     margin-bottom: 0px; */
-/*     float: left; */
-/* } */
-
-.memberlist {
-    overflow: auto;
-    height: 370px;
-/*     max-height: 300px; */
-}
-
-
-
-.graph {
-    width: 670px;
-    height: 670px;
-    float: left;
-}
-
 .info {
 /*     width: 250px; */
 /*     height: 100%; */
     float: left;
 }
 
-/************************************************************************************* */
-
-.panel-title {
-    color: #fff;
-    font-size: 12px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    letter-spacing: 1px;
-/*     line-height: 20px; */
-/*     transition: background .3s ease-in-out; */
-/*     margin-right: 2px; */
-/*     line-height: 1.42857143; */
-/*     border: 1px solid transparent; */
-/*     border-radius: 0px 0px 0 0; */
-}
-
-
-.pilotlist {
+.infolist {
     overflow: auto;
-    height: 200px;
-}
-
-
-
-
-tr.myhover:hover {
-    background-color: #333;
-}
-
-td.ui-draggable {
-    cursor: move;
-}
-
-td.ui-state-disabled {
-    cursor: not-allowed;
-    opacity: .5;
-}
-
-
-
-.content {
-    width: 100%;
-/*     height: 100%; */
-/*     display: block; */
-}
-
-#path-0 {
-    fill: #000;
-/*     opacity: 0; */
+    height: 210px;
 }
 
 #nav {
     position: absolute;
     height: 50px;
-    left: 250px;
+    left: 400px;
 }
 
 
@@ -308,19 +233,21 @@ td.ui-state-disabled {
 }
 
 
-
-.infoitem {
-    display: inline-block;
-    width: 80px;
-/*     height: 100%; */
-/*     float: left; */
+.graph {
+    width: 670px;
+    height: 670px;
+    float: left;
 }
 
-
-.infoentry {
-    display: inline;
+.memberlist {
+    overflow: auto;
+    height: 350px;
 }
 
+.pilotlist {
+    overflow: auto;
+    height: 175px;
+}
 
 
 /************************************************************************************* */
@@ -338,11 +265,8 @@ li.ui-draggable {
 }
 
 .member {
-/*     overflow: auto; */
     min-width: 100px;
     padding-left: 5px;
-/*     min-height: 25px; */
-/*     max-height: 300px; */
 }
 
 .ui-draggable-dragging {
@@ -361,3 +285,27 @@ li.ui-draggable {
 /*     cursor: not-allowed; */
 /*     opacity: .5; */
 /* } */
+
+/************************************************************************************* */
+/* custom */
+
+
+.panel-title {
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    letter-spacing: 1px;
+/*     line-height: 20px; */
+/*     transition: background .3s ease-in-out; */
+/*     margin-right: 2px; */
+/*     line-height: 1.42857143; */
+/*     border: 1px solid transparent; */
+/*     border-radius: 0px 0px 0 0; */
+}
+
+
+.leader {
+    color: #31708f;
+}
